rustdocs/errors/rust-bitcoin-hashes-src-hash160-mod.rs.txt
error[E0432]: unresolved imports `crate::ripemd160`, `crate::sha256`
  --> ../rust-bitcoin/hashes/src/hash160/mod.rs:10:13
   |
10 | use crate::{ripemd160, sha256};
   |             ^^^^^^^^^  ^^^^^^ no `sha256` in the root
   |             |
   |             no `ripemd160` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/hashes/src/hash160/mod.rs:12:8
   |
12 | crate::internal_macros::general_hash_type! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/hash160/mod.rs:18:6
   |
18 | impl Hash {
   |      ^^^^ not a type
   |
help: consider importing this trait instead
   |
10 + use std::hash::Hash;
   |

error[E0404]: expected trait, found struct `crate::HashEngine`
  --> ../rust-bitcoin/hashes/src/hash160/mod.rs:43:6
   |
43 | impl crate::HashEngine for HashEngine {
   |      ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/hash160/mod.rs:44:17
   |
44 |     type Hash = Hash;
   |                 ^^^^ not a type
   |
help: consider importing this trait instead
   |
10 + use std::hash::Hash;
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0404`.
